feat: registerMicroService 개발 완료, kong api를 이용한 등록 개발 진행중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,8 @@ spring:
 springdoc:
   api-docs:
     path: /api  # API 문서의 경로를 /api로 설정
+config:
+  import: optional:file:.env[.properties]
+logging:
+  file:
+    name: prologue-app.log
