--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
+ext {
+    set('springCloudVer', "2025.0.0")
+}
+
 group = 'com.prologue'
 version = '0.0.1-SNAPSHOT'
 description = 'prologue test be'
@@ -36,8 +40,17 @@ dependencies {
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // open feign
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3"
+
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVer}"
+    }
 }
 
 tasks.named('test') {
