--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,10 +20,13 @@ spring:
       hibernate:
         format_sql: true
         # Querydsl query
-        use_sql_comments: true
+        # use_sql_comments: true
 springdoc:
   api-docs:
     path: /api  # API 문서의 경로를 /api로 설정
+kong-admin:
+  api:
+    url: localhost:8001
 config:
   import: optional:file:.env[.properties]
 logging:
